Update api specification
